--- a/sitedir/locale/zh/LC_MESSAGES/django.po
+++ b/sitedir/locale/zh/LC_MESSAGES/django.po
@@ -1,1 +1,34 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2016-06-16 00:01+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 
+#: appuser/templates/appuser/index.html:44
+msgid "Popular Teams"
+msgstr "热门团队"
+
+#: appuser/templates/appuser/index.html:46
+#: appuser/templates/appuser/index.html:68
+msgid "All"
+msgstr "全部"
+
+#: appuser/templates/appuser/index.html:66
+msgid "Recent Tasks"
+msgstr "近期任务"
+
+#: appuser/templates/appuser/index.html:80
+msgid "Leader"
+msgstr "领导"
